--- a/strCalc/ParserMathStrTests/ParserMathStringTests.csproj
+++ b/strCalc/ParserMathStrTests/ParserMathStringTests.csproj
@@ -56,6 +56,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Operations\Operations.csproj">
+      <Project>{5d87b655-fc12-49f0-b346-56caeee8f359}</Project>
+      <Name>Operations</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ParserMathStr1\ParserMathStr.csproj">
       <Project>{f28fc564-14f1-4b4c-937d-d04b9e605db2}</Project>
       <Name>ParserMathStr</Name>
